# jdx-python

./: .gitignore  .gitmodules  README.md  setup.cfg  setup.py  wrapper.c
jdx/: __init__.py  dataset.py  header.py  image.py  version.py
jdx/core/: jdx.c
src/jdx/: dataset.py  header.py  version.py
tests/: test_dataset.py  test_header.py
