[metadata]
name = jdx
version = 0.4.0
author = Jeffrey Shelton
author_email = jeffrey.shelton.c@gmail.com
description = Python library for reading JDX files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeffreycshelton/jdx-python
project_urls =
	Bug Tracker = https://github.com/jeffreycshelton/jdx-python/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
install_requires =
	numpy

[options.packages.find]
where = src
